@@ -1,6 +1,6 @@
 Package: car
 Version: 2.0-15
-Date: 2012/09/30
+Date: 2012/10/04
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
