@@ -240,6 +240,7 @@ S3method(symbox, default)
 S3method(Boot, default)
 S3method(Boot, lm)
 S3method(Boot, glm)
+S3method(Boot, nls)
 S3method(hist, boot)
 S3method(confint, boot)
 S3method(summary, boot)
